# matrix-fn-schema

./: README.md  pyproject.toml
fn_schema/: __init__.py  schema.py
src/matrix_fn_schema/: __init__.py  schema.py
