[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fn-schema"
dynamic = ["version"]
description = "Python function signatures to OpenAI-compatible JSON Schema"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["openai", "json-schema", "function-calling", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "docstring-parser>=0.16",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2"]

[tool.setuptools.dynamic]
version = {attr = "fn_schema.__version__"}

[tool.setuptools.packages.find]
include = ["fn_schema*"]
